# ocpp-cp-simulator

./: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  404.html  AGENTS.md  Dockerfile  README.md  codecov.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.cli.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml  release-drafter.yml
assets/: MeterValueCurveModal-0tkqe_y2.js  MeterValueCurveModal-79bq1saJ.js  MeterValueCurveModal-B09hEqLY.js  MeterValueCurveModal-B2SjQN9E.js  MeterValueCurveModal-B6NJV3nx.js  MeterValueCurveModal-BADh8WDG.js  MeterValueCurveModal-BAR5xAcf.js  MeterValueCurveModal-BKZdL42V.js  MeterValueCurveModal-BRW0d-ai.js  MeterValueCurveModal-B_TRQt7P.js  MeterValueCurveModal-Bbb0huP7.js  MeterValueCurveModal-BesYpZCd.js  MeterValueCurveModal-BgQdsHcB.js  MeterValueCurveModal-Bug2elxJ.js  MeterValueCurveModal-Bv7PWb-L.js  MeterValueCurveModal-BvNJaDTl.js  MeterValueCurveModal-C7dI57oc.js  MeterValueCurveModal-CFP8wy3D.js  MeterValueCurveModal-CJugfxK8.js  MeterValueCurveModal-CP3oYDHw.js  MeterValueCurveModal-CUZ3bahd.js  MeterValueCurveModal-CZ4M7vRQ.js  MeterValueCurveModal-CkPAz2bX.js  MeterValueCurveModal-ClIEDJdE.js  MeterValueCurveModal-D0-HiskF.js  MeterValueCurveModal-D1UIa94Y.js  MeterValueCurveModal-D72J0pT1.js  MeterValueCurveModal-D8ksg8tW.js  (+279 more)
docs/: cli.md  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1175 files in other folders)
