[package]
name = "ocpp-cp-simulator"
version = "0.1.0"
description = "OCPP Charge Point Simulator Desktop App"
authors = ["OCPP CP Simulator Contributors"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
